src/objects/Opportunity_Contact_Member__c.object
<CustomObject>
    <description>Junction object between Contact and Opportunity.</description>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunity Contact Members</relationshipLabel>
        <relationshipName>Opportunity_Contact_Members</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Opportunity_Stage__c</fullName>
        <label>Opportunity Stage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunity Contact Members</relationshipLabel>
        <relationshipName>Opportunity_Contact_Members</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Opportunity Contact Member</label>
    <nameField>
        <displayFormat>OCM-{00000000}</displayFormat>
        <label>Opportunity Contact Member Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Contact Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>